@@ -305,6 +305,7 @@ instance IpeToMisoAttr IA.LineJoin   where attrSvg _ = Nothing
 instance IpeToMisoAttr IA.FillRule   where attrSvg _ = Nothing
 instance IpeToMisoAttr IA.Arrow      where attrSvg _ = Nothing
 instance IpeToMisoAttr IA.RArrow     where attrSvg _ = Nothing
+instance IpeToMisoAttr IA.StrokeOpacity where attrSvg _ = Just strokeOpacity_
 instance IpeToMisoAttr IA.Opacity    where attrSvg _ = Just fillOpacity_
 instance IpeToMisoAttr IA.Tiling     where attrSvg _ = Nothing
 instance IpeToMisoAttr IA.Gradient   where attrSvg _ = Nothing
