@@ -12,8 +12,9 @@
   #+begin_src sh
   find src -name "*.hs" -exec sed -i -e 's/Data.Geometry.Ipe/Ipe/g' {} \;
   #+end_src
-
-
+- Better Documentation; i.e. specific reexports from the Ipe module.
+- Added functionality to load and add a stylesheet to a file.
+- Added support for the stroke-opacity attribute.
 
 ** 0.12
 
